fix alignment

--- a/adverpos/style.css
+++ b/adverpos/style.css
@@ -1,5 +1,5 @@
 .clearfix:after {
-  content: ".";
+  content: "";
   display: block;
   clear: both;
   visibility: hidden;
@@ -52,7 +52,7 @@ a {
   padding-bottom: 25px;
 }
 .top .center {
-  width: 1200px;
+  width: 1000px;
   margin: 10px auto;
   display: -webkit-box;
   display: -moz-box;
@@ -66,7 +66,7 @@ a {
   /*  position:absolute;*/
   height: 200px;
   overflow: hidden;
-  margin: 40px 3%;
+  margin: 40px 30px;
   float: left;
   background-size: cover;
 }
@@ -77,17 +77,17 @@ a {
 }
 .top #left {
   background-position: 0px;
-  width: 25%;
+  width: 300px;
   background-image: url("imgs/nicole_thumbnail.jpg");
 }
 .top #middle {
-  width: 17%;
+  width: 220px;
   background-position: 80%;
   background-image: url("imgs/wilson_thumbnail.jpg");
 }
 .top #right {
   background-position: 0px;
-  width: 25%;
+  width: 300px;
   background-image: url("imgs/nicole_adCollection_thumbnail.jpg");
 }
 .top img {
@@ -99,7 +99,7 @@ a {
 }
 .button {
   padding: 10px;
-  max-width: 180px;
+  max-width: 194px;
   width: 210px;
   height: 18px;
   min-width: 130px;
